# new-haven

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README.txt  github stuff.docx  headers.docx  outerMain.sln
outerMain/: AbstractMap.cpp  AbstractMap.h  AbstractPiece.cpp  AbstractPiece.h  AbstractToken.cpp  AbstractToken.h  BuildFacilityConcept.cpp  BuildFacilityConcept.h  Building.cpp  Building.h  BuildingToken.cpp  (+53 more)
src/: .clang-format  CMakeLists.txt  Controller.cpp  Controller.h  Game.cpp  Game.h  GameBuilder.cpp  GameBuilder.h  main.cpp
src/components/: BuildingHand.cpp  BuildingHand.h  BuildingPool.cpp  BuildingPool.h  Deck.cpp  Deck.h  HarvestTileHand.cpp  HarvestTileHand.h  ResourceTracker.cpp  ResourceTracker.h  Resources.cpp  Resources.h  ScoreBoard.cpp  ScoreBoard.h  ScoringFacilities.cpp  ScoringFacilities.h
src/games/: Game.cpp  Game.h  GameBuilder.h
src/loaders/: GBMapLoader.cpp  GBMapLoader.h  VGMapLoader.cpp  VGMapLoader.h
src/maps/: GBMap.cpp  GBMap.h  TokenGraph.cpp  TokenGraph.h  VGMap.cpp  VGMap.h
src/observers/: Observable.cpp  Observable.h  Observer.h
src/pieces/: AbstractPiece.h  AbstractToken.cpp  AbstractToken.h  Building.cpp  Building.h  BuildingToken.cpp  BuildingToken.h  HarvestTile.cpp  HarvestTile.h  ResourceToken.cpp  ResourceToken.h
src/players/: Player.cpp  Player.h  Roster.cpp  Roster.h
src/test/: GBMapDriver.cpp  PlayerDriver.cpp  ResourcesDriver.h
src/util/: Assert.h  Debug.h  Input.cpp  Input.h  Random.cpp  Random.h  Scanner.cpp  Scanner.h
src/views/: GameView.cpp  GameView.h  PlayerView.cpp  PlayerView.h  RosterView.cpp  RosterView.h  View.cpp  View.h
(+76 files in other folders)
