cmake_minimum_required(VERSION 3.2)
project(New-Haven VERSION 1.0.0 LANGUAGES CXX)
add_executable(new-haven
    src/Controller.cpp
    src/main.cpp
    src/components/BuildingHand.cpp
    src/components/BuildingPool.cpp
    src/components/Deck.cpp
    src/components/HarvestTileHand.cpp
    src/components/ResourceTracker.cpp
    src/components/ScoreBoard.cpp
    src/games/Game.cpp
    src/games/GameBuilder.cpp
    src/maps/GBMap.cpp
    src/maps/TokenGraph.cpp
    src/maps/VGMap.cpp
    src/observers/Observable.cpp
    src/pieces/AbstractToken.cpp
    src/pieces/Building.cpp
    src/pieces/BuildingToken.cpp
    src/pieces/HarvestTile.cpp
    src/pieces/ResourceToken.cpp
    src/players/Player.cpp
    src/players/Roster.cpp
    src/util/Input.cpp
    src/util/Random.cpp
    src/views/GameView.cpp
    src/views/PlayerView.cpp
    src/views/RosterView.cpp
    src/views/View.cpp
)
